--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "khushbu mourya",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^2.3.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
